<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextNumber1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_number1"
        android:inputType="numberDecimal"
        android:textColor="@android:color/black"
        android:importantForAutofill="yes" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_number2"
        android:inputType="numberDecimal"
        android:textColor="@android:color/black"
        android:importantForAutofill="yes" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_add" />

    <Button
        android:id="@+id/buttonSubtract"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_subtract" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_multiply" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_divide" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="18sp"
        android:gravity="center"
        android:padding="16dp" />

</LinearLayout>
